--- a/_posts/2026-02-11-zotero.md
+++ b/_posts/2026-02-11-zotero.md
@@ -16,6 +16,6 @@ Main Contents:
 
 1) [How to sync Zotero Library by Nutstore](https://zhuanlan.zhihu.com/p/2004926984548029893)
    
-
+2) [How to generate bibTeX references by Zotero](https://zhuanlan.zhihu.com/p/2004945800799749339)
 
 This is a series of blog posts. The detailed versions of this blog can be found in my Zhihu column: [Zotero Academic Reading Workflow](https://www.zhihu.com/column/c_2004931210636460907).
