--- a/_posts/2026-02-11-zotero.md
+++ b/_posts/2026-02-11-zotero.md
@@ -1,16 +1,16 @@
 ---
-title: 'Zotero Academic Reading Workflow'
+title: 'Zotero & Obsidian Academic Workflow'
 date: 2026-02-11
 permalink: /posts/zotero/
 tags:
   - Toolchains
   - Zotero
   - Academic Writing
-read_time_minutes: 5
+read_time_minutes: 20
 share: true
 ---
 
-In this blog post, my Zotero academic reading workflow will be recorded. This column is updating continously.
+In this blog post, my Zotero and Obsidian based academic workflow will be recorded. This column is updating continously.
 
 Main Contents:
 
@@ -18,4 +18,6 @@ Main Contents:
    
 2) [How to generate bibTeX references by Zotero](https://zhuanlan.zhihu.com/p/2004945800799749339)
 
-This is a series of blog posts. The detailed versions of this blog can be found in my Zhihu column: [Zotero Academic Reading Workflow](https://www.zhihu.com/column/c_2004931210636460907).
+3) [Two Necessary Obsidian Plugins for Researchers](https://zhuanlan.zhihu.com/p/2005229833693720643)
+
+This is a series of blog posts. The detailed versions of this blog can be found in my Zhihu column: [Zotero & Obsidian Academic Workflow](https://www.zhihu.com/column/c_2004931210636460907).
