--- a/_posts/2026-02-11-zotero.md
+++ b/_posts/2026-02-11-zotero.md
@@ -6,7 +6,8 @@ tags:
   - Toolchains
   - Zotero
   - Academic Writing
-read_time_minutes: 20
+  - RSS
+read_time_minutes: 45
 share: true
 ---
 
@@ -15,9 +16,11 @@ In this blog post, my Zotero and Obsidian based academic workflow will be record
 Main Contents:
 
 1) [How to sync Zotero Library by Nutstore](https://zhuanlan.zhihu.com/p/2004926984548029893)
-   
+
 2) [How to generate bibTeX references by Zotero](https://zhuanlan.zhihu.com/p/2004945800799749339)
 
 3) [Two Necessary Obsidian Plugins for Researchers](https://zhuanlan.zhihu.com/p/2005229833693720643)
+
+4) [My Research RSS Information Flow](https://zhuanlan.zhihu.com/p/2005739436298752529)
 
 This is a series of blog posts. The detailed versions of this blog can be found in my Zhihu column: [Zotero & Obsidian Academic Workflow](https://www.zhihu.com/column/c_2004931210636460907).
